# ampt

./: AmptToHepMCParser.cpp  AmptToHepMCParser.h  AmptToHepMCParserMain.cpp  CMakeLists.txt  Makefile  amptsub.f  art1f.f  exec  hijing1.383_ampt.f  input.ampt  linana.f  main.f  readme  zpc.f
